--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,27 @@
+@font-face {
+	font-family: 'ia-icon-font';
+	src:url('fonts/ia-icon-font.eot?5e8fh8');
+	src:url('fonts/ia-icon-font.eot?#iefix5e8fh8') format('embedded-opentype'),
+		url('fonts/ia-icon-font.ttf?5e8fh8') format('truetype'),
+		url('fonts/ia-icon-font.woff?5e8fh8') format('woff'),
+		url('fonts/ia-icon-font.svg?5e8fh8#ia-icon-font') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+/* =================
+Things on the image */
+
 .ia-main {
 	position: relative;
 	padding: 0;
 	margin-top: 10px;
 }
 
-.ia-main p, .ia-main img, p.comment-image, p.comment-image img {
+.ia-main p,
+.ia-main img,
+p.comment-image,
+p.comment-image img {
 	margin: 0;
 	padding: 0;
 	line-height: 0;
@@ -19,7 +36,7 @@ p.comment-image img {
 	height: 30px;
 	border: 1px solid #fff;
 	z-index: 999;
-	border-radius: 3px;
+	border-radius: 15px;
 	position: absolute;
 	left: 0px;
 	top: 0px;
@@ -32,56 +49,115 @@ p.comment-image img {
 	transition: none;
 }
 
-.anotText {
-	z-index: 999;
-	box-shadow: 0 0 3px #aaa;
-	background: #f4f4f4;
-	height: auto;
-	width: 100%;
-	box-sizing: border-box;
-	display: none;
-	padding: 10px;
-	margin: 10px 0 10px 0;
-	line-height: 0;
+.ia-area {
+	position: absolute;
+	z-index: 299;
+	border: 2px solid #000;
+	background: rgba(0,0,0,0.08);
+	border-radius: 15px;
+	box-shadow: none;
 }
 
-.anotText textarea {
-	padding-left: 3px;
-	margin-bottom: 10px;
-	width: 98%;
+.ia-area.hovered {
+	background: rgba(255,255,255,0.15);
+}
+
+.ia-hover-cloud {
+	position: absolute;
+	padding: 15px 9px 4px 0px;
+	z-index: 400;
+}
+
+.ia-hover-cloud-text {
+	position: relative;
+	margin-top: 0px;
+	background: #f5f5f5;
+	border: none;
+	border-radius: 3px;
+	padding: 3px 9px;
+	box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+	font-size: 0.65em;
+}
+
+.ia-hover-cloud-text:after {
+	width: 0;
+	height: 0;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-bottom: 11px solid #f5f5f5;
+	content: '';
+	position: absolute;
+	top: -11px;
+	left: 10px;
 }
 
 .ia-main:hover .ia-area-vis-switch,
-.ia-main:hover .ia-annotations-vis-switch { 
+.ia-main:hover .ia-annotations-vis-switch {
 	visibility: visible;
 	opacity: 1;
+	-webkit-transition-delay: 0s;
+	-moz-transition-delay: 0s;
+	-ms-transition-delay: 0s;
+	-o-transition-delay: 0s;
 	transition-delay: 0s;
 }
 
-.ia-area-vis-switch, .ia-annotations-vis-switch {
-	background: rgba(255,255,255,0.9);
-	background-repeat: no-repeat;
+.ia-area-vis-switch,
+.ia-annotations-vis-switch {
+	background: #fff;
 	position: absolute;
 	right: 5px;
-	width: 16px;
-	height: 16px;
-	padding: 5px;
-	border-radius: 13px;
+	width: 30px;
+	height: 30px;
+	padding: 0px;
+	border-radius: 15px;
 	cursor: pointer;
 	visibility: hidden;
 	opacity: 0;
-	-webkit-box-sizing: content-box;
-  	-moz-box-sizing: content-box;
-	box-sizing: content-box;
+	-webkit-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
+	-moz-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
+	-ms-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
+	-o-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
 	transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
 	z-index: 399;
 }
 
-.ia-area-vis-switch { background-image: url('../img/icon-eye.png'); top: 5px; }
-.ia-annotations-vis-switch { background-image: url('../img/icon-list.png'); bottom: 5px; }
+.ia-area-vis-switch { top: 5px; }
 
-.hide, .show:hover { background-position: -1px 0px; }
-.hide:hover, .show { background-position: -27px 0px; }
+.ia-annotations-vis-switch { bottom: 5px; }
+
+.ia-area-vis-switch, .ia-annotations-vis-switch,
+.ia-del, .ia-edit, .ia-reply {
+	font-family: 'ia-icon-font';
+	font-size: 28px;
+	text-align: center;
+	color: #024;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 30px;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.ia-area-vis-switch:hover, .ia-annotations-vis-switch:hover,
+.ia-del:hover, .ia-edit:hover, .ia-reply:hover { color: #b30; }
+
+.ia-area-vis-switch.hide:before, .ia-area-vis-switch.show:hover:before { content: "\69"; }
+
+.ia-area-vis-switch.hide:hover:before, .ia-area-vis-switch.show:before { content: "\49"; }
+
+.ia-annotations-vis-switch.hide:before, .ia-annotations-vis-switch.show:hover:before { content: "\6c"; }
+
+.ia-annotations-vis-switch.hide:hover:before, .ia-annotations-vis-switch.show:before { content: "\4c"; }
+
+
+/* ==========
+List of comments */
 
 .ia-annotations ul {
 	list-style: none;
@@ -94,153 +170,204 @@ p.comment-image img {
 
 .ia-annotations ul li {
 	padding: 0px 8px 8px 8px;
-	border-bottom: 1px solid rgba(0,0,0,0.1);
+	border-bottom: 1px solid #eaeaea;
 	margin: 0;
 	position: relative;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+	min-height: 72px;
+	box-sizing: border-box;
 }
 
 .ia-annotations ul li span.ia-date {
-	font-size: 0.75em;
+	font-size: 0.65em;
 	font-weight: 500;
-	color: #444;
+	color: #777;
 }
 
 .ia-annotations ul li span.ia-edited {
-	font-size: 0.75em;
+	font-size: 0.65em;
 	font-weight: 500;
 	margin-left: 3px;
 	color: #444;
 }
 
 .ia-annotations ul li span.ia-author {
-	font-size: 0.75em;
+	font-size: 0.65em;
 	margin-left: 7px;
 	font-weight: 700;
 }
 
 .ia-annotations ul li span.ia-text {
 	display: block;
-	font-size: 0.9em;
-	line-height: 1.6em;
+	font-size: 0.8em;
+	line-height: 1.5em;
 	max-height: 200px;
 	overflow: auto;
+	margin-right: 34px;
 }
 
-.ia-area {
-	position: absolute;
-	z-index: 299;
-	border: 1px solid #000;
-	box-shadow: 0 0 1px 1px #fff;
-	background: rgba(0,0,0,0.03);
-	border-radius: 3px;
-}
-
-.ia-annotation {
+.ia-annotations ul li.ia-annotation {
+	-webkit-transition: background 0.15s ease-out;
+	-moz-transition: background 0.15s ease-out;
+	-ms-transition: background 0.15s ease-out;
+	-o-transition: background 0.15s ease-out;
 	transition: background 0.15s ease-out;
 }
 
-.ia-area.hovered {
-	background: rgba(0,0,0,0.2);
-	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.2) 0%, rgba(0,0,0,0.2) 100%);
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.2)), color-stop(100%,rgba(0,0,0,0.2)));
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.2) 0%,rgba(0,0,0,0.2) 100%);
-	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.2) 0%,rgba(0,0,0,0.2) 100%);
-	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.2) 0%,rgba(0,0,0,0.2) 100%);
-	background: radial-gradient(ellipse at center, rgba(255,255,255,0.2) 0%,rgba(0,0,0,0.2) 100%);
-}
-
 .ia-annotations ul li.ia-annotation.hovered {
-	background: rgba(240,240,240,0.8);
+	background: rgba(240,240,240,0.85);
 }
 
-.ia-annotation:hover .ia-del, .ia-annotation:hover .ia-edit {
+.ia-annotation:hover .ia-del,
+.ia-annotation:hover .ia-edit,
+.ia-annotation:hover .ia-reply {
 	visibility: visible;
 	opacity: 1;
+	-webkit-transition-delay: 0s;
+	-moz-transition-delay: 0s;
+	-ms-transition-delay: 0s;
+	-o-transition-delay: 0s;
 	transition-delay: 0s;
 }
 
-.ia-edit, .ia-del {
-	background: rgba(255,255,255,0.6);
-	background-repeat: no-repeat;	
-	background-position: -1px 0px;
+.ia-edit, .ia-del, .ia-reply {
+	background: transparent;
 	position: absolute;
-	top: 6px;
-	width: 16px;
-	height: 16px;
-	padding: 5px;
-	border-radius: 13px;
+	width: 30px;
+	height: 30px;
+	padding: 0px;
+	border-radius: 15px;
 	cursor: pointer;
 	visibility: hidden;
 	opacity: 0;
-	-webkit-box-sizing: content-box;
-  	-moz-box-sizing: content-box;
-	box-sizing: content-box;
+	-webkit-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
+	-moz-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
+	-ms-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
+	-o-transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
 	transition: visibility 0s ease-out 0.15s, opacity 0.15s ease-out;
 	z-index: 1111;
 }
 
-.ia-edit {
-	background-image: url('../img/icon-edit.png');
-	right: 34px;
-	/*display: none;*/
-}
+.ia-del:before { content: "\64"; }
+
+.ia-del:hover:before { content: "\44"; }
+
+.ia-edit:before { content: "\65"; }
+
+.ia-edit:hover:before { content: "\45"; }
+
+.ia-reply:before { content: "\72"; }
+
+.ia-reply:hover:before { content: "\52"; }
 
 .ia-del {
-	background-image: url('../img/icon-delete.png');
-	right: 4px;
+	right: 5px;
+	top: 5px;
 }
 
-.ia-del:hover, .ia-edit:hover {
-	background-position: -27px 0px;
+.ia-edit {
+	right: 40px;
+	top: 5px;
 }
 
-.ia-di-none {
+.ia-reply {
+	right: 5px;
+	bottom: 5px;
 	display: none;
 }
+
+.ia-di-none { display: none; }
 
 .ia-endedit {
 	display: none;
-	font-size: 0.85em;
+	font-size: 0.65em;
 	font-weight: 500;
 	color: #444;
+	position: absolute;
+	top: 8px;
+	right: 8px;
 }
 
-button {
-	padding: 6px 10px;
-	margin: 0 7px 0 0;
-	border-radius: 5px;
+
+/* =================
+Comment form box */
+
+.anotText {
+	z-index: 999;
+	box-shadow: 0 0 3px #aaa;
+	background: #f4f4f4;
+	height: auto;
+	width: 100%;
+	box-sizing: border-box;
+	display: none;
+	padding: 10px;
+	margin: 10px 0 10px 0;
+}
+
+.anotText textarea {
+	padding-left: 3px;
+	margin-bottom: 10px;
+	width: 98%;
+	font-size: 0.85em;
+}
+
+textarea.ia-annot-edit {
+	font-size: 0.85em;
+	margin-right: 34px;
+}
+
+.anotText button {
+	padding: 8px 16px;
+	margin: 7px 7px 0 0;
+	border-radius: 3px;
 	text-transform: uppercase;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+	font-size: 0.65em;
 }
 
-button.ia-ok {
-	background: #555;
+.anotText button.ia-ok {
+	background: #666;
 	font-weight: bold;
 	color: #fff;
 	border: 1px solid #aaa;
-	float: left;
 }
 
-button.ia-disabled {
+.anotText button.ia-disabled,
+.anotText button.ia-disabled:hover {
 	background: transparent;
 	border: 1px solid #ccc;
 	color: rgba(102, 102, 102, 0.50);
 	font-weight: normal;
-	float: left;
 }
 
-button.ia-cancel {
+.anotText button.ia-cancel {
 	background: transparent;
 	border: 1px solid #ccc;
 	color: #666;
 }
 
-button.ia-cancel:hover {
+.anotText button.ia-cancel:hover {
 	background: #eee;
 	border-color: #ccc;
 }
 
-button.ia-ok:hover {
+.anotText button.ia-ok:hover {
 	background: #888;
 	border-color: #ccc;
+}
+
+/* =================
+JQuery UI */
+
+.ia-main .ui-resizable-se {
+	right: -7px;
+	bottom: -7px;
 }
