--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ Things on the image */
 .ia-main {
 	position: relative;
 	padding: 0;
-	margin-top: 10px;
+	display: inline-block;
 }
 
 .ia-main p,
@@ -40,7 +40,7 @@ p.comment-image img {
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	background: rgba(245,245,245,0.2);
+	background: rgba(254,254,254,1);
 	box-shadow: 0 0 6px rgba(0,0,0,0.8);
 	-webkit-transition: none;
 	-moz-transition: none;
@@ -62,10 +62,20 @@ p.comment-image img {
 	background: rgba(255,255,255,0.15);
 }
 
+.ia-area a {
+	width: 100%;
+	height: 100%;
+	display: block;
+	z-index: 333;
+	text-decoration: none;
+	border-bottom: none !important;
+}
+
 .ia-hover-cloud {
 	position: absolute;
 	padding: 15px 9px 4px 0px;
 	z-index: 400;
+	min-width: 140px;
 }
 
 .ia-hover-cloud-text {
@@ -129,7 +139,7 @@ p.comment-image img {
 .ia-area-vis-switch, .ia-annotations-vis-switch,
 .ia-del, .ia-edit, .ia-reply {
 	font-family: 'ia-icon-font';
-	font-size: 28px;
+	font-size: 25px;
 	text-align: center;
 	color: #024;
 	speak: none;
@@ -159,19 +169,21 @@ p.comment-image img {
 /* ==========
 List of comments */
 
-.ia-annotations ul {
-	list-style: none;
-	margin: 0 0 20px 0;
+.ia-annotations {
+	background: #fff;
 }
 
-.ia-annotations ul li:nth-child(odd) {
-	background: rgba(255,255,255,0.15);
+.ia-annotations ul {
+	list-style: none;
+	margin: 0 0 10px 0 !important;
 }
 
 .ia-annotations ul li {
-	padding: 0px 8px 8px 8px;
-	border-bottom: 1px solid #eaeaea;
-	margin: 0;
+	padding: 0px 8px 0px 8px;
+	border-radius: 2px;
+	border: none;
+	/* border-bottom: 1px solid #eaeaea; */
+	margin: 0 0 1px 0;
 	position: relative;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
@@ -180,6 +192,10 @@ List of comments */
 	transition: all 0.3s ease-in-out;
 	min-height: 72px;
 	box-sizing: border-box;
+}
+
+li.ia-annotation > ul {
+	margin: 10px 0 0 0 !important;
 }
 
 .ia-annotations ul li span.ia-date {
@@ -207,7 +223,6 @@ List of comments */
 	line-height: 1.5em;
 	max-height: 200px;
 	overflow: auto;
-	margin-right: 34px;
 }
 
 .ia-annotations ul li.ia-annotation {
@@ -219,10 +234,10 @@ List of comments */
 }
 
 .ia-annotations ul li.ia-annotation.hovered {
-	background: rgba(240,240,240,0.85);
+	background: rgba(252,252,252,1);
 }
 
-.ia-annotation:hover .ia-del,
+/*.ia-annotation:hover .ia-del,
 .ia-annotation:hover .ia-edit,
 .ia-annotation:hover .ia-reply {
 	visibility: visible;
@@ -232,11 +247,22 @@ List of comments */
 	-ms-transition-delay: 0s;
 	-o-transition-delay: 0s;
 	transition-delay: 0s;
+}*/
+
+.ia-b-hover {
+	visibility: visible !important;
+	opacity: 1 !important;
+	-webkit-transition-delay: 0s;
+	-moz-transition-delay: 0s;
+	-ms-transition-delay: 0s;
+	-o-transition-delay: 0s;
+	transition-delay: 0s;	
 }
 
-.ia-edit, .ia-del, .ia-reply {
+.ia-reply, .ia-del, .ia-edit {
 	background: transparent;
 	position: absolute;
+	top: 5px;
 	width: 30px;
 	height: 30px;
 	padding: 0px;
@@ -252,6 +278,10 @@ List of comments */
 	z-index: 1111;
 }
 
+.ia-reply:before { content: "\72"; }
+
+.ia-reply:hover:before { content: "\52"; }
+
 .ia-del:before { content: "\64"; }
 
 .ia-del:hover:before { content: "\44"; }
@@ -260,25 +290,11 @@ List of comments */
 
 .ia-edit:hover:before { content: "\45"; }
 
-.ia-reply:before { content: "\72"; }
+.ia-reply { right: 2px; }
 
-.ia-reply:hover:before { content: "\52"; }
+.ia-del { right: 32px; }
 
-.ia-del {
-	right: 5px;
-	top: 5px;
-}
-
-.ia-edit {
-	right: 40px;
-	top: 5px;
-}
-
-.ia-reply {
-	right: 5px;
-	bottom: 5px;
-	display: none;
-}
+.ia-edit { right: 64px; }
 
 .ia-di-none { display: none; }
 
@@ -288,13 +304,13 @@ List of comments */
 	font-weight: 500;
 	color: #444;
 	position: absolute;
-	top: 8px;
+	margin-top: 8px;
 	right: 8px;
 }
 
 
 /* =================
-Comment form box */
+Comment and reply form box */
 
 .anotText {
 	z-index: 999;
@@ -308,10 +324,11 @@ Comment form box */
 	margin: 10px 0 10px 0;
 }
 
-.anotText textarea {
+.anotText textarea,
+.ia-edit-form textarea {
 	padding-left: 3px;
-	margin-bottom: 10px;
-	width: 98%;
+	margin: 5px 0 0 0;
+	/*width: 98%;*/
 	font-size: 0.85em;
 }
 
@@ -320,7 +337,8 @@ textarea.ia-annot-edit {
 	margin-right: 34px;
 }
 
-.anotText button {
+.anotText button,
+.ia-edit-form button {
 	padding: 8px 16px;
 	margin: 7px 7px 0 0;
 	border-radius: 3px;
@@ -333,7 +351,8 @@ textarea.ia-annot-edit {
 	font-size: 0.65em;
 }
 
-.anotText button.ia-ok {
+.anotText button.ia-ok,
+.ia-edit-form button.ia-ok {
 	background: #666;
 	font-weight: bold;
 	color: #fff;
@@ -341,25 +360,30 @@ textarea.ia-annot-edit {
 }
 
 .anotText button.ia-disabled,
-.anotText button.ia-disabled:hover {
+.anotText button.ia-disabled:hover,
+.ia-edit-form button.ia-disabled,
+.ia-edit-form button.ia-disabled:hover {
 	background: transparent;
 	border: 1px solid #ccc;
 	color: rgba(102, 102, 102, 0.50);
 	font-weight: normal;
 }
 
-.anotText button.ia-cancel {
+.anotText button.ia-cancel,
+.ia-edit-form button.ia-cancel {
 	background: transparent;
 	border: 1px solid #ccc;
 	color: #666;
 }
 
-.anotText button.ia-cancel:hover {
+.anotText button.ia-cancel:hover,
+.ia-edit-form button.ia-cancel:hover {
 	background: #eee;
 	border-color: #ccc;
 }
 
-.anotText button.ia-ok:hover {
+.anotText button.ia-ok:hover,
+.ia-edit-form button.ia-ok:hover {
 	background: #888;
 	border-color: #ccc;
 }
